2011-04-17  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Barth.

        Rename PLATFORM(CA) to USE(CA)
        https://bugs.webkit.org/show_bug.cgi?id=58742

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):

2011-04-17  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Barth.

        Rename PLATFORM(CG) to USE(CG)
        https://bugs.webkit.org/show_bug.cgi?id=58729

        * DumpRenderTree/PixelDumpSupport.cpp:
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::paintRect):
        * DumpRenderTree/config.h:
        * DumpRenderTree/win/PixelDumpSupportWin.cpp:
        (createBitmapContextFromWebView):
        * TestWebKitAPI/PlatformWebView.h:
        * WebKitTestRunner/config.h:
        * WebKitTestRunner/win/TestInvocationWin.cpp:

2011-04-16  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Eric Seidel.

        Rename PLATFORM(CAIRO) to USE(CAIRO)
        https://bugs.webkit.org/show_bug.cgi?id=55192

        * DumpRenderTree/PixelDumpSupport.cpp:
        * DumpRenderTree/config.h:
        * DumpRenderTree/win/PixelDumpSupportWin.cpp:
        (createBitmapContextFromWebView):
        * WebKitTestRunner/config.h:

2011-04-16  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        show diffs+test inline in the results page
        https://bugs.webkit.org/show_bug.cgi?id=58723
        
        Put each row in it's own tbody and sort based on tbodies. That way
        we can append the results to the tbody inline as another table row.

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-16  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        handle new tests in the new results html file
        https://bugs.webkit.org/show_bug.cgi?id=58715

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-15  Dirk Pranke  <dpranke@chromium.org>
